--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,72 +6,39 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
 header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 30px;
+
   nav {
-    font-family: Noto Sans;
-    font-size: 22px;
-    text-align: right;
-    display: flex;
-    align-items: center;
-
-    ul{
-      width: 100%;
-      padding-right: 1rem;
+    ul {
       li {
-        color: #707070;
-        font-weight: 500;
-        display: inline-block;
-        margin: 1.5rem;
+        list-style-type: none;
+        display: inline;
+        margin: 0 20px;
+        &:first-child {
+          margin-left: 0;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
       }
-    }
-
-    .office {
-      width: 200px;
-      font-weight: 800;
-      color: #4B4B4B;
-      margin: 0 2rem;
     }
   }
 }
 
 section {
-  background-image: url(../Background.png);
-  width: 100%;
-  height: 946px;
+  background-image: url("../Background.png");
+  background-size: cover;
+  height: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  .center {
-    text-align: center;
-    h1 {
-      color: #FFFFFF;
-      height: 68px;
-      font-family: Noto Sans;
-      font-weight: bold;
-      font-size: 50px;
-      line-height: 68px;
-    }
-  
-    p {
-      color: #E6E6E6;
-      height: 41px;
-      font-family: Noto Sans;
-      font-weight: 500;
-      font-size: 30px;
-      line-height: 41px;
-    }
-  
-    button {
-      padding: 1.5rem 2.5rem;
-      color: #4B4B4B;
-      background-color: #FFE6CF;
-      border-radius: 8px;
-      font-family: Noto Sans;
-      font-weight: 500;
-      font-size: 22px;
-      margin: 2em;
-      border: none;
-    }
-  }
 }
